--- a/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -6,21 +6,10 @@
                 <span class="pull-right"><button class="btn btn-success">New Contact</button></span>
             </div>
             <div class="panel-body">
-                <a 
-                    href="#"
-                    class="list-group-item clearfix"
-                    *ngFor="let contact of contacts">
-                    <div class="pull-left">
-                        <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-                    </div>
-                    <span class="pull-right">
-                        <img
-                            [src]="contact.imageUrl"
-                            alt="{{ contact.imageUrl }}"
-                            class="img-responsive"
-                            style="max-height: 50px;">
-                    </span>
-                </a>                
+                <app-contact-item
+                    *ngFor="let contact of contacts"
+                    [contact]="contact"
+                    (click)="onSelected(contact)"></app-contact-item>                
             </div>
         </div>
     </div>
