--- a/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="pull-left">Contacts</h3>
-                <span class="pull-right"><button class="btn btn-success">New Contact</button></span>
+                <span class="pull-right"><button routerLink="new" class="btn btn-success">New Contact</button></span>
             </div>
             <div class="panel-body">
                 <app-contact-item
