--- a/workspace/projects/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -7,8 +7,8 @@
                 <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
             </span>
             <div class="pull-right">
-                <button class="btn btn-primary">Edit</button>
-                <button class="btn btn-danger">Edit</button>
+                <a class="btn btn-primary" routerLink="./edit">Edit</a>
+                <a (click)="onDelete()" class="btn btn-danger">Delete</a>
             </div>
         </div>
         <div class="panel-body">
