--- a/workspace/projects/cms/src/app/documents/document-edit/document-edit.component.html
+++ b/workspace/projects/cms/src/app/documents/document-edit/document-edit.component.html
@@ -1,1 +1,66 @@
-<p>document-edit works!</p>
+<div class="panel panel-default">
+    <div class="panel-body">
+  
+      <form id="document-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="name">Document Title:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              [ngModel]="document?.name"
+              #name="ngModel"
+              class="form-control"
+              size="120"
+              max="120">
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="description">Document Description:</label>
+            <input
+                required
+                type="text"
+                id="description"
+                name="description"
+                [ngModel]="document?.description"
+                class="form-control"
+                size="120"
+                max="255">
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="url">Document URL:</label>
+            <input
+                required
+                type="text"
+                id="url"
+                name="url"
+                [ngModel]="document?.url"
+                #name="ngModel"
+                class="form-control"
+                size="150"
+                max="255">
+          </div>
+        </div>
+        <div class="alert alert-danger" *ngIf="f.invalid">
+            <p>The Document Title and Document URL are required fields.</p>
+        </div>
+  
+        <div class="row">
+          <div class="col-xs-12 btn-toolbar">
+            <button class="btn btn-success" type="submit" [disabled]="f.invalid">Save</button>
+            <button class="btn btn-primary" type="button" >Cancel</button><!--(click)="onCancel()"-->
+          </div>
+        </div>
+  
+      </form>
+  
+    </div>
+  </div>
+  
+  
