--- a/workspace/projects/cms/src/app/documents/document-edit/document-edit.component.html
+++ b/workspace/projects/cms/src/app/documents/document-edit/document-edit.component.html
@@ -54,7 +54,7 @@
         <div class="row">
           <div class="col-xs-12 btn-toolbar">
             <button class="btn btn-success" type="submit" [disabled]="f.invalid">Save</button>
-            <button class="btn btn-primary" type="button" >Cancel</button><!--(click)="onCancel()"-->
+            <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button><!---->
           </div>
         </div>
   
