--- a/workspace/projects/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,15 +1,19 @@
-<!-- <div class="panel panel-default">
+<div class="panel panel-default">
     <div class="panel-body">
-      <form id="contact-edit">
+      <form id="contact-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="name">Name:</label>
             <input
-              type="text"
-              id="name"
-              class="form-control required"
-              size="120"
-              max="120">
+                required
+                type="text"
+                id="name"
+                name="name"
+                [ngModel]="contact?.name"
+                #name="ngModel"
+                class="form-control required"
+                size="120"
+                max="120">
           </div>
         </div>
   
@@ -17,36 +21,53 @@
           <div class="col-sm-12 form-group">
             <label for="email">Email:</label>
             <input
-              type="text"
-              id="email"
-              class="form-control required"
-              size="120"
-              max="255">
+                required
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+                type="text"
+                id="email"
+                name="email"
+                [ngModel]="contact?.email"
+                #email="ngModel"
+                class="form-control required"
+                size="120"
+                max="255">
           </div>
+        </div>
+        <div class="alert alert-danger" *ngIf="email.touched && email.invalid">
+            <p>Enter a valid email.</p>
         </div>
   
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="phone">Phone:</label>
             <input
-              type="text"
-              id="phone"
-              class="form-control invalid"
-              size="150"
-              max="255">
-  
+                pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
+                type="text"
+                id="phone"
+                name="phone"
+                [ngModel]="contact?.phone"
+                #phone="ngModel"
+                class="form-control invalid"
+                size="150"
+                max="255">  
           </div>
+        </div>
+        <div class="alert alert-danger" *ngIf="phone.touched && phone.invalid">
+            <p>Enter a valid phone number.</p>
         </div>
   
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="imageUrl">Image URL:</label>
             <input
-              type="text"
-              id="imageUrl"
-              class="form-control"
-              size="150"
-              max="255">
+                type="text"
+                id="imageUrl"
+                name="imageUrl"
+                [ngModel]="contact?.imageUrl"
+                #imageUrl="ngModel"
+                class="form-control"
+                size="150"
+                max="255">
           </div>
         </div>
   
@@ -68,11 +89,13 @@
   
           </div>
         </div>
-  
+        <div class="alert alert-danger" *ngIf="name.invalid || name.untouched || email.invalid || email.untouched">
+            <p>The Name and Email fields are required.</p>
+        </div>
   
         <div class="row">
           <div class="col-xs-12 btn-toolbar">
-            <button class="btn btn-success" type="submit">Save</button>
+            <button class="btn btn-success" type="submit" [disabled]="f.invalid">Save</button>
             <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
           </div>
         </div>
@@ -80,4 +103,4 @@
       </form>
     </div>
   </div>
-   -->
+  
