--- a/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -9,7 +9,8 @@
                 <app-contact-item
                     *ngFor="let contact of contacts"
                     [contact]="contact"
-                    (click)="onSelected(contact)"></app-contact-item>                
+                    (click)="onSelected(contact)"
+                    dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"></app-contact-item>                
             </div>
         </div>
     </div>
