--- a/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/workspace/projects/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,13 +1,24 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="panel panel-default">
-            <div class="panel-heading clearfix">
-                <h3 class="pull-left">Contacts</h3>
-                <span class="pull-right"><button routerLink="new" class="btn btn-success">New Contact</button></span>
-            </div>
+            <div class="panel-heading">
+                <div class="row">
+                  <h3 class="title pad-left-right">Contacts</h3>
+                </div>
+                <div class="row">
+                  <div class="input-group pull-left pad-left-right col-xs-6">
+                    <!-- Add the search box input field here -->
+                    <input type="text" class="form-control" placeholder="Enter a search value" (keyup)="search(searchBox.value)" #searchBox>
+                    <div class="glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+                  </div>
+                  <div class="pull-right pad-left-right">
+                    <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="panel-body">
                 <app-contact-item
-                    *ngFor="let contact of contacts"
+                    *ngFor="let contact of contacts | contactsFilter:searchBox.value"
                     [contact]="contact"
                     (click)="onSelected(contact)"
                     dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"></app-contact-item>                
